--- a/E_Ticaret_2023/Views/Kategori/Create.cshtml
+++ b/E_Ticaret_2023/Views/Kategori/Create.cshtml
@@ -4,15 +4,13 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
-
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Kategoriler</h4>
+        <h2>Yeni Kategori</h2>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -23,16 +21,16 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group" style="margin:5px">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Oluştur" class="btn btn-success btn-sm" />
+                @Html.ActionLink("Kategoriler", "Index", "", new { @class = "btn btn-warning btn-sm" })
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
 </div>
 
 @section Scripts {
