--- a/E_Ticaret_2023/Views/Kategori/Delete.cshtml
+++ b/E_Ticaret_2023/Views/Kategori/Delete.cshtml
@@ -4,11 +4,9 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Kategoriler</h4>
+    <h2>Kategori Silinsin mi?</h2>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -25,8 +23,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Delete" class="btn btn-danger btn-sm" /> 
+            @Html.ActionLink("Kategoriler", "Index", "", new { @class = "btn btn-warning btn-sm" })
         </div>
     }
 </div>
