--- a/E_Ticaret_2023/Views/Kategori/Edit.cshtml
+++ b/E_Ticaret_2023/Views/Kategori/Edit.cshtml
@@ -19,27 +19,24 @@
 
         <div class="row">
             
-                @Html.LabelFor(model => model.KategoriAdi, htmlAttributes: new { @class = "control-label col " })
+                @Html.LabelFor(model => model.KategoriAdi, htmlAttributes: new { @class = "control-label col-md-1 "  })
 
-            
-
-            <div class="col">
+            <div class="col-md-10">
                 @Html.EditorFor(model => model.KategoriAdi, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.KategoriAdi, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-success" style="border-top:5px"/>
+            <div class="col-md-offset-2 col-md-10 "style="margin-top:4px">
+                <input type="submit" value="Kaydet" class="btn btn-success" />
+                @Html.ActionLink("Kategoriler", "Index","",new {@class="btn btn-warning"})
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
