--- a/E_Ticaret_2023/Views/Urun/Create.cshtml
+++ b/E_Ticaret_2023/Views/Urun/Create.cshtml
@@ -4,15 +4,13 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
-
 
 @using (Html.BeginForm(null, null, FormMethod.Post, new {enctype="multipart/form-data"}))
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Urunler</h4>
+        <h2>Yeni Urun</h2>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -55,17 +53,15 @@
         </div>
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10 "style="margin:4px">
-                <span class="bi bi-pencil-fill"></span>
-                <input type="submit" value="Create" class="btn btn-success btn-sm" />
+            <div class="col-md-offset-2 col-md-10 " style="margin:4px">             
+                <input type="submit" value="Oluştur" class="btn btn-success btn-sm bi bi-pencil-fill" />
+                @Html.ActionLink("Ürünler", "Index", "", new { @class = "btn btn-warning btn-sm" })
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
