--- a/E_Ticaret_2023/Views/Urun/Edit.cshtml
+++ b/E_Ticaret_2023/Views/Urun/Edit.cshtml
@@ -47,22 +47,20 @@
         </div>
     </div>
     <div class="form-group">
-        <label class="control-label col-md-2">Ürün Resim</label>
+        <label class="control-label col-md-2">Ürün Resmi</label>
         <div class="col-md-10">
             <input type="file" name="urunResim" class="form-control" />
         </div>
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Save" class="btn btn-default" />
+            <input type="submit" value="Kaydet" class="btn btn-success btn-sm"style="margin:4px" />
+            @Html.ActionLink("Ürünler", "Index", "", new { @class = "btn btn-warning btn-sm" })
         </div>
     </div>
 </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
