--- a/E_Ticaret_2023/Views/Home/Index.cshtml
+++ b/E_Ticaret_2023/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using E_Ticaret_2023.Models
+@model Urunler
 @{
     ViewBag.Title = "Home Page";
 }
@@ -21,7 +22,6 @@
             </ul>
         </section>
 
-
         <section class="col-md-8" aria-labelledby="librariesTitle">
             <h2 id="librariesTitle">Ürünler</h2>
             
@@ -38,7 +38,7 @@
                         <div class="card-body">
                           <p class="card-text">
 
-                            <a href="/Urunler/Details/@item.UrunId" class="btn btn-secondary btn-sm" style="margin:4px">Ürün Detay &raquo; </a>
+                            <a href="/Home/Urun/@item.UrunId" class="btn btn-secondary btn-sm" style="margin:4px">Ürün Detay &raquo; </a>
                         </p>
 
                         </div>
