--- a/E_Ticaret_2023/Views/Shared/_LoginPartial.cshtml
+++ b/E_Ticaret_2023/Views/Shared/_LoginPartial.cshtml
@@ -5,9 +5,14 @@
     {
     @Html.AntiForgeryToken()
 
+
+    
     <ul class="navbar-nav navbar-right">
         <li>
-            @Html.ActionLink("Merhaba " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage", @class="nav-link" })
+            @Html.ActionLink("Merhaba " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Profil", @class = "nav-link" })
+        </li>
+        <li>
+            @Html.ActionLink(" ", "Index", "Sepet", routeValues: null, htmlAttributes: new { title = "Sepet", @class = "nav-link bi bi-basket" })
         </li>
         <li><a class="nav-link" href="javascript:document.getElementById('logoutForm').submit()">Çıkış</a></li>
     </ul>
