--- a/E_Ticaret_2023/Views/Manage/Index.cshtml
+++ b/E_Ticaret_2023/Views/Manage/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model E_Ticaret_2023.Models.IndexViewModel
 @{
-    ViewBag.Title = "Manage";
+    ViewBag.Title = "Yönetim";
 }
 
 <main aria-labelledby="title">
