--- a/E_Ticaret_2023/Views/Urun/Index.cshtml
+++ b/E_Ticaret_2023/Views/Urun/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<E_Ticaret_2023.Models.Urunler>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Ürünler";
 }
 
 <h2>Ürünler</h2>
