--- a/E_Ticaret_2023/Views/Home/Urun.cshtml
+++ b/E_Ticaret_2023/Views/Home/Urun.cshtml
@@ -1,7 +1,7 @@
 ﻿@using E_Ticaret_2023.Models
 @model Urunler
 @{
-    ViewBag.Title = "Urun";
+    ViewBag.Title = "Ürünler";
 }
 
 <div class="row">
