--- a/E_Ticaret_2023/Views/Kategori/Index.cshtml
+++ b/E_Ticaret_2023/Views/Kategori/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<E_Ticaret_2023.Models.Kategoriler>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Kategoriler";
 }
 
 <h2>Kategoriler</h2>
