--- a/E_Ticaret_2023/Views/Sepet/Index.cshtml
+++ b/E_Ticaret_2023/Views/Sepet/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using E_Ticaret_2023.Models
 @model IEnumerable<Sepet>
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Sepetim";
 }
 
 <h2>Sepet</h2>
